--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-django
-djangorestframework
-djangorestframework-simplejwt
+Django==4.2.16
+djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
+psycopg2-binary==2.9.10
