--- a/docker-compose.develop.yml
+++ b/docker-compose.develop.yml
@@ -4,18 +4,25 @@ services:
   web:
     build:
       context: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: >
+      sh -c "python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/app
     ports:
       - "8000:8000"
     depends_on:
       - db
-    # env_file:
-    #   - .env
+    environment:
+      POSTGRES_DB: mydatabase
+      POSTGRES_USER: myuser
+      POSTGRES_PASSWORD: mypassword
+      POSTGRES_HOST: 'db'
+      POSTGRES_PORT: '5432'
 
   db:
     image: postgres:13
+    restart: always
     environment:
       POSTGRES_DB: mydatabase
       POSTGRES_USER: myuser
