--- a/docker-compose.testing.yml
+++ b/docker-compose.testing.yml
@@ -5,8 +5,8 @@ services:
     build:
       context: .
     command: >
-      sh -c "python manage.py migrate &&
-             python manage.py runserver 0.0.0.0:8000"
+      sh -c "python src/manage.py migrate &&
+             python src/manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/app
     ports:
